# hash_demo

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  main.rs
test_data/: init.txt
